# oltp_fs

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  README.md  doc.md
benchmarking/: README.md  dbfs-server.Dockerfile  docker-compose.yaml  flamegraph.Dockerfile
benchmarking/benchbase-config/: dbfs_tpcc_docker.xml  postgres_tpcc_docker.xml
benchmarking/config/: dbfs_tpcc_docker.xml  postgres_tpcc_docker.xml  postgres_tpcc_local.xml
benchmarking/notebooks/: tpcc_dbfs_vs_postgres_basic_comparison.ipynb
benchmarking/results/20260503/tpcc/dbfs/: dbfs_query_trace.csv  tpcc_2026-05-03_02-33-07.raw.csv  tpcc_2026-05-03_02-33-07.results.Delivery.csv  tpcc_2026-05-03_02-33-07.results.NewOrder.csv  tpcc_2026-05-03_02-33-07.results.OrderStatus.csv  tpcc_2026-05-03_02-33-07.results.Payment.csv  tpcc_2026-05-03_02-33-07.results.StockLevel.csv  tpcc_2026-05-03_02-33-07.results.csv  tpcc_2026-05-03_02-33-07.samples.csv  tpcc_2026-05-03_02-33-07.summary.json  tpcc_2026-05-03_04-12-31.metrics.json  (+9 more)
benchmarking/scripts/: run_postgres_tpcc_docker.sh  run_postgres_tpcc_full_docker.sh  take_benchmark.sh
benchmarking/tools/: dbfs_reproducer.py
dbfs-jdbc/: README.md  pom.xml
docs/: dev_history.md  query_execution.md
docs/engineering-notes/: 2026-06-analyze-naive-eviction-policy.md  2026-06-implementing-arc.md  2026-06-imrovements-based-on-flamegraph.md  2026-06-join-strategy-selection-and-access-paths.md  2026-06-survey-on-performance-bottleneck.md  2026-06-why-index-lookup-join-outperformed-hash-join.md
src/: btreecursor.cpp  btreecursor.h  bufferpool.cpp  bufferpool.h  cell.h  file.cpp  file.h  frame_directory.cpp  frame_directory.h  index_page.cpp  intermediate_cell.cpp  intermediate_cell.h  leaf_cell.cpp  leaf_cell.h  logging.cpp  logging.h  page.cpp  page.h  record_cell.cpp  record_cell.h
src/catalog/: table.cpp  table.h  table_metadata.cpp  table_metadata.h
src/execution/: binder.cpp  binder.h  comparison_predicate.cpp  comparison_predicate.h  comparison_predicate_parser.cpp  comparison_predicate_parser.h  create_index_parser.cpp  create_index_parser.h  create_table_parser.cpp  create_table_parser.h  drop_table_parser.cpp  drop_table_parser.h  executor.cpp  executor.h  filter_operator.h  heap_fetch.cpp  heapfile.h  index_lookup_planner.cpp  index_lookup_planner.h  index_scan.cpp  index_scan.h  insert_parser.cpp  insert_parser.h  operator.h  order_by_spec.h  orderby_operator.cpp  orderby_operator.h  parser_ast_helpers.cpp  parser_ast_helpers.h  pg_query_json_parser.cpp  pg_query_json_parser.h  projection_operator.h  rid_operator.h  select_item.cpp  select_item.h  select_parser.cpp  select_parser.h  seq_scan_operator.cpp  seq_scan_operator.h  update_assignment.h  (+2 more)
src/execution/operators/: aggregate_operator.h  closable_queue.h  filter_operator.h  hash_join_operator.cpp  hash_join_operator.h  heap_fetch.cpp  heap_fetch.h  heap_fetch_operator.cpp  heap_fetch_operator.h  index_lookup_join_operator.cpp  index_lookup_join_operator.h  index_scan.cpp  index_scan.h  index_scan_operator.cpp  index_scan_operator.h  limit_operator.cpp  limit_operator.h  loop_join_operator.cpp  loop_join_operator.h  orderby_operator.cpp  orderby_operator.h  projection_operator.h  seq_scan_operator.cpp  seq_scan_operator.h
src/execution/operators/exchange/: exchange_consumer_operator.h  exchange_coordinator.h  exchange_dispatcher.h  exchange_operator.h  exchange_producer_operator.h  exchange_sink.h
src/execution/parsers/: create_index_parser.h  create_table_parser.cpp  create_table_parser.h  delete_parser.cpp  delete_parser.h  drop_table_parser.cpp  drop_table_parser.h  insert_parser.cpp  insert_parser.h  parser_ast_helpers.cpp  parser_ast_helpers.h  pg_query_json_parser.cpp  pg_query_json_parser.h  select_parser.cpp  select_parser.h  update_parser.cpp  update_parser.h
src/executor/: executor.cpp  executor.h  heap_fetch.cpp  heap_fetch.h  index_scan.cpp  index_scan.h
src/schema/: README.md  column.h  field_value.h  schema.h  tuple.h
src/server/: main.cpp  server.cpp  server.h
src/storage/: README.md  btreecursor.cpp  btreecursor.h  bufferpool.cpp  bufferpool.h  cell.h  file.cpp  file.h  frame_directory.cpp  frame_directory.h  index_page.cpp  index_page.h  intermediate_cell.cpp  intermediate_cell.h  leaf_cell.cpp  leaf_cell.h  lsn_allocator.cpp  lsn_allocator.h  page.cpp  page.h  record_builder.cpp  record_builder.h  record_cell.cpp  record_cell.h  record_serializer.cpp  record_serializer.h  rid.h  wal_record.cpp  wal_record.h
src/storage/buffer/: bufferpool.cpp  bufferpool.h  frame_directory.cpp  frame_directory.h
src/storage/disk/: file.cpp
src/storage/index/: btreecursor.cpp  btreecursor.h  index_key.h  index_page.cpp  index_page.h  intermediate_cell.cpp  intermediate_cell.h  leaf_cell.cpp  leaf_cell.h  rid.h
src/storage/page/: cell.h  page.cpp  page.h
src/storage/record/: heap_file_access.cpp  heap_file_access.h  record_cell.h  record_serializer.cpp  record_serializer.h
src/storage/runtime/: bufferpool.cpp  bufferpool.h  file.cpp  file.h  frame_directory.cpp  frame_directory.h
src/storage/wal/: lsn_allocator.cpp  wal.cpp  wal.h  wal_body.cpp  wal_body.h  wal_record.cpp  wal_record.h
src/table/: table.cpp  table.h
src/tuple/: field_value.h  typed_row.h
test/: btreecursor.cpp  bufferpool.cpp  cell.cpp  e2e.cpp  executor.cpp  file.cpp  frame_directory.cpp  lsn_allocator.cpp  page.cpp  record_cell.cpp  table.cpp  wal.cpp  wal_body.cpp  wal_record.cpp
test/catalog/: table.cpp
test/e2e/: e2e.cpp
test/execution/: exchange_operator.cpp  executor.cpp  filter_operator.cpp  hash_join_operator.cpp  heap_fetch_operator.cpp  limit_operator.cpp  loop_join_operator.cpp  orderby_operator.cpp  projection_operator.cpp  server.cpp  stub_rid_operator.h  stub_row_operator.h
test/storage/buffer/: bufferpool.cpp  frame_directory.cpp
test/storage/disk/: file.cpp
test/storage/index/: btreecursor.cpp  index_key.cpp
test/storage/page/: cell.cpp  page.cpp
test/storage/runtime/: bufferpool.cpp  file.cpp
test/storage/wal/: wal.cpp  wal_body.cpp  wal_record.cpp
(+124 files in other folders)
